# analysirs

./: Cargo.toml
examples/: 1bitcca.bc  1bitcca.json  2bitcca.bc  2bitcca.json  comparator_clock.bc  comparator_clock.json  id.bc  id2.bc  latch.bc  latch_bypass.bc  latch_bypass.json  monostable_inv.bc  not.bc  not.json  not2.bc  not2.json  otherxor.bc  otherxor.json  tff.bc  xor.bc  xor.json
src/: bin_expr.rs  bool.rs  bool_egg.rs  circuit.rs  main.rs  separate.rs  timing.rs
