[package]
name = "analysirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redpiler_graph = { git = "https://github.com/MCHPR/MCHPRS" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
egg = "0.7.1"
